# themestylebrowser

./: .gitignore  LICENSE  README.md  meson.build
app/: assets.cpp  assets.s
assets/: .themestyles  svg2png
debian/: changelog  control  copyright  rules
man/: themestylebrowser.1
src/: Makefile  main.cpp  module.cpp
src/tsb/: ImageProperties.cpp  ImageProperties.hpp  ItemProperties.cpp  ItemProperties.hpp  LibraryModel.cpp  LibraryModel.hpp  TSBFrame.cpp  TSBFrame.hpp
